--- a/browse-page/styles.css
+++ b/browse-page/styles.css
@@ -1,5 +1,7 @@
 .page {
     background-color: #ffffff;
+    font-family: Lato, "Helvetica Neue", Arial, sans-serif;
+    font-size: 14px;
 
     .header {
         display: flex;
@@ -9,7 +11,9 @@
         padding: 10px;
 
         .logo {
+            font-size: 20px;
             .sub {
+                font-size: 12px;
                 will-change: opacity;
                 opacity: 1;
                 transition: opacity 0.5s ease;
@@ -27,12 +31,17 @@
                 border: 0;
                 outline: 0;
                 border-bottom: 1px solid #cccccc;
-                padding: 2px;
+                padding: 5px;
+                font-size: 14px;
+                min-width: 300px;
+                &:focus {
+                    border-bottom-color: #07486B;
+                }
             }
             .icon {
                 position: absolute;
                 right: 0;
-                top: 0;
+                top: 5px;
                 pointer-events: none;
                 width: 16px;
                 height: 16px;
