--- a/browse-page/__styles/styles.css
+++ b/browse-page/__styles/styles.css
@@ -8,7 +8,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 10px;
+        padding: 30px;
 
         .logo {
             font-size: 25px;
@@ -51,17 +51,17 @@
     .content {
         display: flex;
         flex-direction: row;
-        padding: 10px;
+        padding: 10px 30px;
 
         .left-pane {
             box-shadow: 0 1px 3px -1px rgba(0,0,0,.4);
             border-radius: 1px;
-            width: 200px;
+            width: 300px;
 
             .bar {
                 font-size: 12px;
                 border-bottom: 1px solid #eeeeee;
-                padding: 10px;
+                padding: 20px;
                 .head {
                     font-size: 18px;
                     color: #07486B;
@@ -83,8 +83,8 @@
                     input {padding: 3px; margin-top:2px; display: inline-block; width: 30%;}
                 }
                 .button {
-                    margin: 5px 0;
-                    padding: 5px;
+                    margin-top: 20px;
+                    padding: 10px;
                     text-align: center;
                     border-radius: 3px;
                     cursor: pointer;
@@ -149,4 +149,20 @@
             }
         }
     }
+
+
+    .loader-shell {
+        color: transparent;
+        transform: translateZ(0);
+        width: 100%;
+        background-color: rgba(0,0,0,0.1);
+        background-image: -webkit-gradient(linear, left top, right top, color-stop(0%, transparent), color-stop(50%,rgba(255,255,255,0.35)), color-stop(100%, transparent));
+        background-repeat: no-repeat;
+        -webkit-animation: loading-shell 2s linear infinite;
+    }
+    @keyframes loading-shell {
+        0%{background-position: -500px 0}
+        100%{background-position: 500px 0}
+    }
+
 }
