--- a/browse-page/__styles/styles.css
+++ b/browse-page/__styles/styles.css
@@ -159,6 +159,19 @@
         background-image: -webkit-gradient(linear, left top, right top, color-stop(0%, transparent), color-stop(50%,rgba(255,255,255,0.35)), color-stop(100%, transparent));
         background-repeat: no-repeat;
         -webkit-animation: loading-shell 2s linear infinite;
+        &.first {
+            height: 100px;
+            width: 10%;
+            margin-right: 5px;
+        }
+        &.second {
+            height: 30px;
+        }
+        &.third {
+            height: 30px;
+            width: 80%;
+            margin-top: 5px;
+        }
     }
     @keyframes loading-shell {
         0%{background-position: -500px 0}
