--- a/browse-page/__styles/styles.css
+++ b/browse-page/__styles/styles.css
@@ -8,10 +8,16 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 30px;
+        padding: 30px 0;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: #ffffff;
 
         .logo {
             font-size: 25px;
+            margin-left: 30px;
             .sub {
                 font-size: 14px;
                 will-change: opacity;
@@ -24,8 +30,10 @@
                 }
             }
         }
+
         .search {
             position: relative;
+            right: 30px;
 
             .input {
                 font-size: 14px;
@@ -48,15 +56,18 @@
             }
         }
     }
+
     .content {
         display: flex;
         flex-direction: row;
         padding: 10px 30px;
+        margin-top: 100px;
 
         .left-pane {
             box-shadow: 0 1px 3px -1px rgba(0,0,0,.4);
             border-radius: 1px;
             width: 300px;
+            position: fixed;
 
             .bar {
                 font-size: 12px;
@@ -100,46 +111,112 @@
                 }
             }
         }
+
+        .right-pane-container {
+            margin-left: 300px;
+            width: 100%;
+        }
+
         .right-pane {
             flex: 1;
-            padding: 10px;
-            box-shadow: 0 1px 3px -1px rgba(0,0,0,.4);
-            border-radius: 1px;
+            padding: 20px;
+
             .menu {
-                margin-bottom: 10px;
+                text-align: center;
+                font-size: 12px;
+                margin-bottom: 20px;
+
+                .result {
+                    &:before, &:after {
+                        background-color: #848484;
+                        content: "";
+                        display: inline-block;
+                        height: 1px;
+                        vertical-align: middle;
+                        width: 5%;
+                        margin: 0 10px;
+                    }
+                    color: #07486B;
+                }
             }
+
             .items {
                 .item {
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
                     border-bottom: 1px solid #eeeeee;
-                    padding: 5px 0;
+                    padding: 20px;
 
                     .info {
                         width: 50%;
                         display: flex;
                         flex-direction: row;
-                        align-items: center;
+                        align-items: flex-start;
                         .image {
-                            margin: 10px;
+                            margin-right: 30px;
+                            width: 150px;
+                            background-color: rgba(0,0,0,0.1);
+                            background-image: -webkit-gradient(linear, left top, right top, color-stop(0%, transparent), color-stop(50%,rgba(255,255,255,0.35)), color-stop(100%, transparent));
+                            background-repeat: no-repeat;
+                            -webkit-animation: loading-shell 2s linear infinite;
+
+                            .img {
+                                width: 150px;
+                            }
                         }
                         .title {
-
+                            font-size: 20px;
+                            display: inline-block;
+                        }
+                        .category {
+                            color: #848484;
+                            &.apparel {
+                                &:before {
+                                    content: " (apparel)"
+                                }
+                            }
+                            &.accessory {
+                                &:before {
+                                    content: " (accessory)"
+                                }
+                            }
                         }
                         .line-2 {
-
+                            margin: 10px 0;
                         }
                         .desc {
-
+                            color: #848484;
+                            width: 90%;
+                            display: -webkit-box;
+                            -webkit-line-clamp: 3;
+                            -webkit-box-orient: vertical;
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            margin: 10px 0;
+                        }
+                        .colors {
+                            border-radius: 3px;
+                            padding: 5px;
+                            display: inline-block;
+                            .color {
+                                width: 24px;
+                                height: 24px;
+                            }
                         }
                     }
                     .price {
+                        &.oos {
+                            .quantity, .value {
+                                color: #cccccc;
+                            }
+                        }
                         .value {
-
+                            font-size: 20px;
                         }
                         .quantity {
-
+                            color: #7CB342;
+                            margin-top: 5px;
                         }
                     }
                     &:last-child {
@@ -176,6 +253,21 @@
     @keyframes loading-shell {
         0%{background-position: -500px 0}
         100%{background-position: 500px 0}
+    }
+
+    .rating {
+        display: inline-block;
+        padding: 5px;
+        font-size: 12px;
+        border-radius: 5px;
+        color: #fff;
+        background-color: #D4E157;
+        .star {
+            margin-right: 2px;
+        }
+        &.positive {
+            background-color: #9CCC65;
+        }
     }
 
 }
