--- a/browse-page/__styles/styles.css
+++ b/browse-page/__styles/styles.css
@@ -193,6 +193,12 @@
                             overflow: hidden;
                             margin: 5px 0;
                             border-left: 1px dashed #cccccc;
+                            .text{
+                                display: block;
+                                max-width: 80%;
+                                text-align: justify;
+                                padding: 8px;
+                            }
                         }
                         .colors {
                             border-radius: 3px;
@@ -240,7 +246,7 @@
         &.first {
             height: 100px;
             width: 10%;
-            margin-right: 5px;
+            margin-right: 10px;
         }
         &.second {
             height: 30px;
@@ -350,8 +356,13 @@
                                     margin: 0 auto;
                                 }
                                 .desc {
+                                    width: 100%;
                                     font-size: 12px;
                                     border: none;
+                                    .text{
+                                        max-width: 100%;
+                                        text-align: center;
+                                    }
                                 }
                             }
                             .details {
